Fix legitimate colour contrast issue in the RPB TagCloud, which had ended up in the cypress AXE allow list. Other TagCloud style tweaks

--- a/client/src/components/TagCloud.scss
+++ b/client/src/components/TagCloud.scss
@@ -17,52 +17,41 @@
   padding: 0px;
   border: none;
   margin: 1px;
-  background-color: transparent;
   line-height: 1.5em;
   font-size: 1em;
+
+  border-radius: $standardBorderRadius;
+  overflow: hidden;
+
+  background-color: $buttonPrimaryColor;
+
+  &:hover,
+  &:focus-within,
+  &.active {
+    background-color: $primaryColor;
+  }
 }
 
 .tag-cloud-main > li > button {
   text-align: center;
-  background-color: $buttonPrimaryColor;
+  background-color: inherit;
   padding: 3px 8px 3px 15px;
-  border-radius: $standardBorderRadius 0px 0px $standardBorderRadius;
   color: $textLightColor;
   border: none;
 
   &:only-child {
     padding: 3px 15px;
-    border-radius: $standardBorderRadius;
   }
 }
 
 .tag-cloud-main > li > span.tag-button-helper {
   text-align: center;
-  background-color: $buttonPrimaryColor;
   padding-right: 3px;
-  border-radius: 0px $standardBorderRadius $standardBorderRadius 0px;
-  border: none;
   color: $textLightColor;
-
-  // Fix inconsistent sub-pixel white gaps in IE11
-  padding-left: 1px;
-  margin-right: -1px;
 
   // override glossary icon size
   & > .glossary-tooltip-link > svg {
     width: 1.5em !important;
     height: 2em !important;
   }
-}
-
-.tag-cloud-main > li:hover > button,
-.tag-cloud-main > li > button:focus,
-.tag-cloud-main > li:hover > span,
-.tag-cloud-main > li > span:focus {
-  background-color: $buttonSecondaryColor;
-}
-
-.tag-cloud-main > li.active > button,
-.tag-cloud-main > li.active > span {
-  background-color: $primaryColor;
 }
